2009-04-20  vadim  <vadim@vk.crocodile.org>

	* RuleElement.cpp: Additional validation to make sure Inteval
	objects are not allowed in rule elements except for the
	RuleElementInterval

2009-04-17  vadim  <vadim@vk.crocodile.org>

	* Cluster.cpp (Cluster::Cluster): Support for clusters of
	firewalls.

	* FWObjectDatabase_10.xslt: auto-upgrade transformation adds tree
	branch Clusters

	* VERSION: DTD version 11

	* Merging patches from Secunet Security Networks AG to add support
	for Secuwall firewall.

	* VERSION: start v3.1.0 branch v3_1_secunet

2009-04-09  vadim  <vadim@vk.crocodile.org>

	* VERSION: start v3.0.5

2009-04-08  Vadim Kurland  <vadim@vk.crocodile.org>

	* v3.0.4 released, merged to the trunk, this comment is r256

2009-03-29  vadim  <vadim@vk.crocodile.org>

	* v3.0.4 release

2009-03-25  vadim  <vadim@vk.crocodile.org>

	* RuleElement.cpp (RuleElementTSrv::validateChild): fixed bug
	#2712575: "NAT RuleSetView allows TagService to be in Translated
	Svc". TagService object should not be allowed in "Translated
	Service" in NAT rules.

2009-02-21  vadim  <vadim@vk.crocodile.org>

	* VERSION (LIBFWBUILDER_REVISION): because of internal changes in
	libfwbuilder in v3.0.4, bumping up so version to 8.2.0

2009-02-17  vadim  <vadim@vk.crocodile.org>

	* Management.cpp (Management::fromXML): fixed bug #2609796
	"internal object Management does not accept ipv6 address". Class
	Management should accept ipv6 address.

2009-01-23  vadim  <vadim@vk.crocodile.org>

	* FWObjectDatabase_search.cpp (FWObjectDatabase::findWhereObjectIsUsed):
	fixes for bug #2412334: "feature request: where used -> directly".
	Function FWObjectDatabase::findWhereObjectIsUsed returns a set of
	pointers FWObject*. These pointers can be either parent of the
	given object, or FWReference objects pointing to it. Note the
	change: in previous versions this function tried to clean up
	returned set and replaced references with pointers to the group or