@@ -1,3 +1,11 @@
+2009-05-07  vadim  <vadim@vk.crocodile.org>
+
+	* RuleSet.cpp (RuleSet::insertRuleAtTop): methods insertRuleAtTop
+	and appendRuleAtBottom now accept argument "hidden_rule". If this
+	arg is true, added new rule becomes "hidden" (using
+	Rule::setHidden()). Method RuleSet::renumberRules() assigns
+	negative position numbers to hidden rules
+
 2009-04-20  vadim  <vadim@vk.crocodile.org>
 
 	* RuleElement.cpp: Additional validation to make sure Inteval
